# ecommerce-ai-platform

./: .env.example  LICENSE  docker-compose.yml  init-dbs.sql  pyproject.toml  turbo.json
apps/connector-worker/: Dockerfile  README.md  pyproject.toml
apps/connector-worker/docs/: CONNECTORS.md
apps/connector-worker/src/: celery_app.py  models.py  tasks.py
apps/connector-worker/src/connectors/: base.py  factory.py  file_connector.py  postgres.py
apps/dev-tools/: Dockerfile  pyproject.toml
apps/dev-tools/src/: main.py
apps/dev-tools/src/routes/: minio.py  postgres.py  qdrant.py
apps/indexer-service/: pyproject.toml
apps/indexer-service/connector/: base.py  cursor_store.py  file_connector.py  postgres.py
apps/indexer-service/src/: celery_app.py  models.py
apps/indexer-service/src/pipeline/: tasks.py
apps/indexer-service/src/pipeline/stages/: clean.py
apps/indexer-worker/: Dockerfile  pyproject.toml
apps/indexer-worker/pipeline/: __init__.py
apps/indexer-worker/src/: database.py  migrations.py  repository.py
apps/indexer-worker/src/pipeline/: cpu_worker.py  orchestrator.py  relay.py  resilience.py  tasks.py
apps/indexer-worker/src/pipeline/stages/: upsert.py
apps/platform-api/: Dockerfile  README.md  pyproject.toml
apps/platform-api/docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md
apps/platform-api/src/: celery_app.py  database.py  main.py
apps/platform-api/src/api/: endpoints.py  schemas.py
apps/search-service/: package.json  pyproject.toml
docs/: ARCH-OUTBOX-PATTERN.md
infra/environments/local/: docker-compose.yml
