[project]
name = "connector-worker"
version = "0.1.0"
description = "Fetches data from external sources and pushes to the indexing queue."
requires-python = ">=3.12"
dependencies = [
    "celery>=5.3.6",
    "redis>=5.0.1",
    "pydantic>=2.5.3",
    "structlog>=24.1.0",
    "requests>=2.31.0",
    "psycopg[binary]>=3.1.13",
    "pandas>=2.1.4",
    "s3fs>=2023.12.2",
    "pyarrow>=14.0.1",
]

[tool.uv]
package = true

