[project]
name = "platform-api"
version = "0.1.0"
description = "Management API for the E-commerce AI Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "psycopg[binary]>=3.1.13",
    "psycopg_pool>=3.2.1",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
]

[tool.uv]
package = true
